Fixed compile issue